--- a/themes/minimal/layouts/partials/css.html
+++ b/themes/minimal/layouts/partials/css.html
@@ -240,7 +240,7 @@ input[type=radio] {
   position: absolute;
   visibility: hidden; }
   input[type=radio]:checked ~ .check {
-    border: 3px solid #329e5e; }
+    border: 4px solid #329e5e; }
 
 
 .form-submit {
@@ -417,26 +417,7 @@ select {
         color: white;
     }
 
-    /*table {
-        width:75%;
-        table-layout: auto;
-    }
-    th{
-        white-space:nowrap !important;
-        overflow-wrap: break-word;
-    }
-    td{
-        white-space:nowrap !important;
-        overflow-wrap: break-word;
-    }
-    tfoot{
-        white-space:nowrap !important;
-        overflow-wrap: break-word !important;
-        font-weight: bold;
-        color: var(--accent);
-    }*/
-
-    #tax_confirmation_phrase {
+    #amt_calculator_result_message, #iso_result_message {
         font-weight: bold;
         color: var(--accent);
     }
