--- a/themes/minimal/layouts/partials/body-close.html
+++ b/themes/minimal/layouts/partials/body-close.html
@@ -3,3 +3,4 @@
   Override this in your site to insert code just before the closing <body> tag.
   For example, to install an analytics tracking package.
 -->
+If you have any questions, comments, feedback or would like to boost my ego, feel free to reach out at <a href="mailto:amtsimplified@gmail.com">amtsimplified@gmail.com</a>
