--- a/themes/minimal/layouts/partials/footer.html
+++ b/themes/minimal/layouts/partials/footer.html
@@ -1,7 +1,8 @@
 		{{ partial "body-close" . }}
 
         <footer>
-            <p class="copyright text-muted">{{ .Site.Params.copyright | default "&copy; All rights reserved. Powered by [Hugo](https://gohugo.io) and [Minimal](https://github.com/calintat/minimal)." | markdownify }}</p>
+            <p class="copyright text-muted">{{ .Site.Params.copyright | default "&copy; All rights reserved. Powered by [Hugo](https://gohugo.io) and [Minimal](https://github.com/calintat/minimal)" | markdownify }} | <a href="https://www.privacypolicies.com/live/1a5a04b1-1be7-4612-87d7-981e0e6b993b">Privacy Policy</a></p>
+
         </footer>
 
         
