--- a/layouts/shortcodes/amt-calculator.html
+++ b/layouts/shortcodes/amt-calculator.html
@@ -30,7 +30,7 @@
                       </div>
                       <h4 class="form-header"> Income </h4>
                       <div class="form-input">
-                          <label for="salary" class="required">Salary/Wages</label>
+                          <label for="salary" class="required">Gross Wages</label>
                           <input type="number" name="salary" id="salary" class="required_field" placeholder="0" onchange=check_min(this)>
                           <p class="calculator_validation_p calculator_minimum_p" id="salary_p"></p>
                       </div>
@@ -52,6 +52,11 @@
 
                   <div class="form-group">
                       <h4 class="form-header"> Deductions / Exemptions </h4>
+                      <div class="form-input">
+                          <label for="health_insurance_premium">Medical/Vision Insrance Premiums</label>
+                          <input type="number" name="health_insurance_premium" id="health_insurance_premium" placeholder="0" onchange=check_min(this)>
+                          <p class="calculator_minimum_p" id="health_insurance_premium_p"></p>
+                      </div>
                       <div class="form-input">
                           <label for="trad_401k">Traditional 401k Contributions</label>
                           <input type="number" name="trad_401k" id="trad_401k" placeholder="0" onchange=check_min(this)>
@@ -222,12 +227,16 @@
   </thead>
   <tbody>
     <tr>
-      <td>Income (Wages & Short Term Capital Gains Only)</td>
+      <td>Income (Wages & Net Capital Gains)</td>
       <td id="reg_table_total_income_td"></td>
     </tr>
-    <tr class="table_divider">
-      <td>Long Term Capital Gains</td>
+    <tr>
+      <td>Net Long Term Capital Gains Only</td>
       <td id="reg_table_long_term_capital_gains_td"></td>
+    </tr>
+    <tr class="table_divider">
+      <td>Capital Loss Carryforward (to next year)</td>
+      <td id="reg_table_leftover_capital_loss_carryover_td"></td>
     </tr>
     <tr class="table_divider">
       <td>Total Exemptions / Above the Line Deductions</td>
@@ -290,8 +299,12 @@
       <td id="amt_table_total_income_td"></td>
     </tr>
     <tr>
-      <td>Long Term Capital Gains</td>
+      <td>Net Long Term Capital Gains</td>
       <td id="amt_table_long_term_capital_gains_td"></td>
+    </tr>
+    <tr>
+      <td>Capital Loss Carryforward (to next year)</td>
+      <td id="amt_table_leftover_capital_loss_carryover_td"></td>
     </tr>
     <tr class="table_divider">
       <td>Total ISO Spread</td>
@@ -625,6 +638,7 @@
     var salary=empty_to_zero(document.getElementById("salary").value);
     var short_term_capital_gains=empty_to_zero(document.getElementById("short_term_capital_gains").value);
     var long_term_capital_gains=empty_to_zero(document.getElementById("long_term_capital_gains").value);
+    var health_insurance_premium = empty_to_zero(document.getElementById("health_insurance_premium").value);
     var trad_401k=empty_to_zero(document.getElementById("trad_401k").value);
     var hsa=empty_to_zero(document.getElementById("hsa").value);
     var trad_ira=empty_to_zero(document.getElementById("trad_ira").value);
@@ -661,8 +675,13 @@
       shares_exercised_3 = strike_price_3 = fmv_3 = 0;
     }
 
+    salary = parseFloat(salary);
+    short_term_capital_gains = parseFloat(short_term_capital_gains);
+    long_term_capital_gains = parseFloat(long_term_capital_gains);
+    health_insurance_premium = parseFloat(health_insurance_premium);
+
     // Calculate Total Income
-    var total_income = parseFloat(salary) + parseFloat(short_term_capital_gains);
+    var total_income = salary + short_term_capital_gains + long_term_capital_gains;
     
     // Make sure number is under 401k limit
     if (trad_401k > trad_401k_limit) {
@@ -684,11 +703,9 @@
       document.getElementById("trad_ira").value = trad_ira_limit;
       document.getElementById('trad_ira_p').innerHTML = "The IRA limit for your filing status is: " + trad_ira_limit;
     }
-    
-    var total_exemptions = parseFloat(trad_401k) + parseFloat(trad_ira) + parseFloat(hsa);
 
     // MAGI: AGI but includes Trad IRA, SLI
-    var magi = total_income - parseFloat(trad_401k) - parseFloat(hsa);
+    var magi = total_income - health_insurance_premium - parseFloat(trad_401k) - parseFloat(hsa);
 
     // Married, Filing Separately cannot take the Student Loan Interest Deduction. Go Figure
     if (filing_status == 'married_separately') {
@@ -718,8 +735,10 @@
       sli = sli.toFixed(2);
     } 
 
+    var total_exemptions = parseFloat(trad_401k) + parseFloat(trad_ira) + parseFloat(hsa) + parseFloat(sli) + health_insurance_premium;
+
     // Calculate AGI
-    var agi = total_income - parseFloat(trad_401k) - parseFloat(hsa) - parseFloat(trad_ira) - parseFloat(sli);
+    var agi = total_income - total_exemptions;
     
     // Medical Expenses Deduction - only include if more than 10% of AGI, else 0
     if (medical_expenses > (agi * 0.1)) {
@@ -736,7 +755,7 @@
     }
 
     // Standard vs Itemized Deduction
-    var itemized_deduction = parseFloat(medical_expenses) + parseFloat(salt) + parseFloat(mortgage_interest) + parseFloat(sli);
+    var itemized_deduction = parseFloat(medical_expenses) + parseFloat(salt) + parseFloat(mortgage_interest);
 
     if (itemized_deduction > standard_deduction) {
       var regular_deduction_final = itemized_deduction;
@@ -746,10 +765,71 @@
       var deduction_category = 'Standard Deduction';
     }
 
-    // Calculate Regular taxable income
+    /* Now that you've calculated MAGI and AGI, calculate if your capital gains are long term or short term, and positive or negative
+    And use this to calculate your TAXABLE_INCOME
+    shorthand chart below to depict the scenarios
+    s / l
+    + / + = +
+    - / - = -
+    b+ / - = +
+    b- / + = -
+    - / b+ = +
+    + / b- = -
+    */
+
+    var taxable_income = 0;
+    var sum_capital_gains = short_term_capital_gains + long_term_capital_gains;
+    var long_term_capital_gains_for_calc = 0;
+
+    // If the net capital gain for the year is positive
+    if (sum_capital_gains > 0) {
+      // If both are positive, do not use the sum of the two. Only use the short term cap gain number to calculate taxable income. Use the long term number for long term tax
+      if (short_term_capital_gains >= 0 && long_term_capital_gains >= 0) {
+        taxable_income = salary + short_term_capital_gains - total_exemptions - regular_deduction_final;
+        long_term_capital_gains_for_calc = long_term_capital_gains;
+
+      // If short is positive, and long is negative, use the net sum capital gain (as that remaining number is all short term gain). Long term gain is 0 for tax purposes
+      } else if (short_term_capital_gains > 0 && long_term_capital_gains < 0) {
+        taxable_income = salary + sum_capital_gains - total_exemptions - regular_deduction_final;
+
+      // If long is positive, and short is negative, do not use the net sum capital gain (as that number is all long term). assign to long_term_capital_gains_for_calc
+      } else if (short_term_capital_gains < 0 && long_term_capital_gains > 0) {
+        taxable_income = salary - total_exemptions - regular_deduction_final;
+        long_term_capital_gains_for_calc = sum_capital_gains;
+      }
+
+    // If the net capital gain for the year is negative
+    } else if (sum_capital_gains < 0) {
+      // If both are negative, you can only use at max 3000 to deduct for this year, and if it is not less than -3000, use sum_capital_gains. keep long_term_capital_gains_for_calc at 0
+      var neg_sum_capital_gains = sum_capital_gains;
+      var leftover_capital_loss_carryover = 0;
+      if (sum_capital_gains < -3000) {
+        neg_sum_capital_gains = -3000;
+        leftover_capital_loss_carryover = (sum_capital_gains + 3000) * -1;
+      }
+      taxable_income = salary + neg_sum_capital_gains - total_exemptions - regular_deduction_final;
+
+    // If the net capital gain happens to zero out, just disregard it. keep long_term_for_calc at 0
+    } else if (sum_capital_gains == 0) {
+      taxable_income = salary - total_exemptions - regular_deduction_final;
+    }
+
     // In case where deduction brings you to negative taxable income, your taxable income is 0
-    var taxable_income = agi - regular_deduction_final > 0 ? agi - regular_deduction_final : 0;
+    taxable_income = taxable_income < 0 ? 0 : taxable_income;
     
+
+    // Calculate Long Term Capital Gains tax (used in regular tax system and AMT system)
+    var long_term_tax_index = 0;
+    if(taxable_income > long_term_capital_gain_tax_bracket[long_term_capital_gain_tax_bracket.length - 1]) {
+      long_term_tax_index = long_term_capital_gain_tax_bracket.length - 1;
+    } else {
+      long_term_tax_index = long_term_capital_gain_tax_bracket.findIndex(function(number) {
+        return number > taxable_income;
+      }) - 1;
+    }
+    var long_term_capital_gains_tax_owed = long_term_capital_gains_for_calc * long_term_capital_gains_tax_owed_rate[long_term_tax_index];
+
+
     // CALCULATE REGULAR TAXES
     // Returns index of first tax bracket threshold greater than taxable_income, so subtract 1 (Javascript arrays first elemnt is index 0)
     var taxable_income_index = 0;
@@ -772,7 +852,7 @@
 
     // Calculate Medicare Tax
     var medicare_tax_owed = 0;
-    var medicare_taxable_income = parseFloat(salary) - parseFloat(hsa);
+    var medicare_taxable_income = salary - health_insurance_premium - parseFloat(hsa);
     // If your medicare taxable income exceeds the limit, multiply the additional amount by the additional rate, and the remaining (which should just be the threshold) by the regular rate
     if (medicare_taxable_income > additional_medicare_tax_threshold) {
       medicare_tax_owed = (medicare_taxable_income - additional_medicare_tax_threshold) * additional_medicare_tax_rate + (additional_medicare_tax_threshold * regular_medicare_tax_rate);
@@ -787,18 +867,6 @@
     } else {
       ssi_tax_owed = salary * ssi_tax_rate;
     }
-
-    // Calculate Long Term Capital Gains tax (used in regular tax system and AMT system)
-    var long_term_tax_index = 0;
-    
-    if(taxable_income > long_term_capital_gain_tax_bracket[long_term_capital_gain_tax_bracket.length - 1]) {
-      long_term_tax_index = long_term_capital_gain_tax_bracket.length - 1;
-    } else {
-      long_term_tax_index = long_term_capital_gain_tax_bracket.findIndex(function(number) {
-        return number > taxable_income;
-      }) - 1;
-    }
-    var long_term_capital_gains_tax_owed = parseFloat(long_term_capital_gains) * long_term_capital_gains_tax_owed_rate[long_term_tax_index];
     
     // Calculate Total Regular Income Tax (Federal Income Tax, Medicare, SSI, Long Term)
     var regular_income_tax_owed = 0;
@@ -811,51 +879,18 @@
     var iso_spread_subtotal = iso_spread_subtotal_1 + iso_spread_subtotal_2 + iso_spread_subtotal_3;
     
     // Calculate AMTI (before AMT exemption)
-    // To calculate the exemption amount, you must include long term capital gains
+    // To calculate the exemption amount, you must include long term capital gains (as part of AGI)
     // However, to calculate your actual AMTI, you do not include long term capital gains
-    var amt_eligible_deductions = 0;
-    var amti_for_exemption = 0;
-    var amti = 0;
+    var amt_eligible_deductions = parseFloat(mortgage_interest);
+    var amti_for_exemption = agi + iso_spread_subtotal - amt_eligible_deductions;
 
-    if (deduction_category == 'Standard Deduction') {
-      amt_eligible_deductions = 0;
-      /* In rare cases where AGI was less than the standard deduction, it would be wrong to add the standard deduction back into taxable income, because you would be giving them more AGI than they have. (i.e. standard deduction is 12,400 but agi is 6,400. taxable income would be 0 (as it cant be negative), and if you added the full standard deduction their 'agi' would now be 12,400 which is wrong)
-
-      Same logic for itemized deduction. If you happen to have more deductions than standard (i.e. SALT 10k, mortage interest 10k, you take the itemized)
-      */
-      if (agi < standard_deduction) {
-        amti_for_exemption = agi + parseFloat(long_term_capital_gains) + iso_spread_subtotal;
-      } else {
-        amti_for_exemption = taxable_income + parseFloat(long_term_capital_gains) + iso_spread_subtotal + standard_deduction;
-      }
-    } 
-    else if (deduction_category == 'Itemized Deduction'){
-      // If you took itemized deduction, AMT tax code only allows for SLI and Mortgage interest deduction. So you subtract those deductions from AGI, disregard SALT and medical expenses
-      amt_eligible_deductions = parseFloat(sli) + parseFloat(mortgage_interest);
-      if (agi < itemized_deduction) {
-        amti_for_exemption = agi - amt_eligible_deductions + parseFloat(long_term_capital_gains) + iso_spread_subtotal;
-      } else {
-        amti_for_exemption = taxable_income + parseFloat(long_term_capital_gains) + iso_spread_subtotal + parseFloat(salt) + parseFloat(medical_expenses);
-      }
-    }
     // If the resulting AMTI_for_exemption, for whatever reason, is less than zero, set it to zero
     amti_for_exemption = amti_for_exemption < 0 ? 0 : amti_for_exemption;
 
-    // Now we calculate your AMTI, borrowing same corner case logic as above (for when agi less than deductions)
-    if (deduction_category == 'Standard Deduction') {
-      if (agi < standard_deduction) {
-        amti = agi + iso_spread_subtotal;
-      } else {
-        amti = taxable_income + iso_spread_subtotal + standard_deduction;
-      }
-    } 
-    else if (deduction_category == 'Itemized Deduction') {
-      if (agi < itemized_deduction) {
-        amti = agi - amt_eligible_deductions + iso_spread_subtotal;
-      } else {
-        amti = taxable_income + iso_spread_subtotal + parseFloat(salt) + parseFloat(medical_expenses);
-      }
-    }
+    // Now we calculate your AMTI
+    // AMTI is the same as AMTI_for_exemption except it doesn't include long term cap gains. 
+    // So we subtract 'lon' as that value is 0 if your net sum long_term_capital_gains_for_calc negative, or positive but all short term. So basically if it's > 0 that means you had long term gains which we want to exclude from AMTI
+    var amti = agi - long_term_capital_gains_for_calc + iso_spread_subtotal - amt_eligible_deductions;
 
     // If the resulting AMTI_for_exemption, for whatever reason, is less than zero, set it to zero
     amti = amti < 0 ? 0 : amti;
@@ -894,7 +929,8 @@
     // DEPENDENT CREDIT?
 
     // Transform to $0.00 format
-    long_term_capital_gains = currency_formatter.format(long_term_capital_gains);
+    long_term_capital_gains_for_calc = currency_formatter.format(long_term_capital_gains_for_calc);
+    leftover_capital_loss_carryover = currency_formatter.format(leftover_capital_loss_carryover);
     total_income = currency_formatter.format(total_income);
     total_exemptions = currency_formatter.format(total_exemptions);
     agi = currency_formatter.format(agi);
@@ -921,7 +957,8 @@
     document.getElementById("final_amt_tax_owed_td").innerHTML = final_amt_tax_owed;
     // Fill in Regular Income Results Table
     document.getElementById("reg_table_total_income_td").innerHTML = total_income;
-    document.getElementById("reg_table_long_term_capital_gains_td").innerHTML = long_term_capital_gains;
+    document.getElementById("reg_table_long_term_capital_gains_td").innerHTML = long_term_capital_gains_for_calc;
+    document.getElementById("reg_table_leftover_capital_loss_carryover_td").innerHTML = leftover_capital_loss_carryover;
     document.getElementById("reg_table_total_exemptions_td").innerHTML = total_exemptions;
     document.getElementById("reg_table_agi_td").innerHTML = agi;
     document.getElementById("reg_table_magi_td").innerHTML = magi;
@@ -935,7 +972,8 @@
     document.getElementById("reg_table_regular_income_tax_owed_td").innerHTML = regular_income_tax_owed;
     // Fill in AMT Results Table
     document.getElementById("amt_table_total_income_td").innerHTML = total_income;
-    document.getElementById("amt_table_long_term_capital_gains_td").innerHTML = long_term_capital_gains;
+    document.getElementById("amt_table_long_term_capital_gains_td").innerHTML = long_term_capital_gains_for_calc;
+    document.getElementById("amt_table_leftover_capital_loss_carryover_td").innerHTML = leftover_capital_loss_carryover;
     document.getElementById("amt_table_iso_spread_subtotal_td").innerHTML = iso_spread_subtotal;
     document.getElementById("amt_table_total_exemptions_td").innerHTML = total_exemptions;
     document.getElementById("amt_table_amt_eligible_deductions_td").innerHTML = amt_eligible_deductions;
