--- a/themes/minimal/layouts/partials/footer.html
+++ b/themes/minimal/layouts/partials/footer.html
@@ -1,13 +1,13 @@
 		{{ partial "body-close" . }}
 
         <footer>
-            <p class="copyright text-muted">{{ .Site.Params.copyright | default "&copy; All rights reserved. Powered by [Hugo](https://gohugo.io) and [Minimal](https://github.com/calintat/minimal)" | markdownify }} | <a href="https://www.privacypolicies.com/live/1a5a04b1-1be7-4612-87d7-981e0e6b993b">Privacy Policy</a></p>
+            <p class="copyright text-muted">{{ .Site.Params.copyright | default "&copy; All rights reserved. Powered by [Hugo](https://gohugo.io) and [Minimal](https://github.com/calintat/minimal)" | markdownify }} | <a href="https://www.privacypolicies.com/live/1a5a04b1-1be7-4612-87d7-981e0e6b993b">Privacy Policy</a> | <a href="mailto:amtsimplified@gmail.com">Contact</a></p>
 
         </footer>
 
         
         
-        <script data-name="BMC-Widget" src="https://cdnjs.buymeacoffee.com/1.0.0/widget.prod.min.js" data-id="amtsimplified" data-description="Support me on Buy me a coffee!" data-message="If you find this helpful, I would appreciate your support by either powering my energy (coffee) or my servers (donations)! " data-color="#40DCA5" data-position="Right" data-x_margin="18" data-y_margin="18"></script>
+        <script data-name="BMC-Widget" src="https://cdnjs.buymeacoffee.com/1.0.0/widget.prod.min.js" data-id="amtsimplified" data-description="Support me on Buy me a coffee!" data-message="If you find this helpful, I would appreciate your support! " data-color="#40DCA5" data-position="Right" data-x_margin="18" data-y_margin="18"></script>
 
     </body>
 
