--- a/themes/minimal/layouts/partials/header.html
+++ b/themes/minimal/layouts/partials/header.html
@@ -7,6 +7,7 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>{{ .Title }}</title>
+        <meta name="description" content="{{ .Description }}">
         {{ if .Site.Params.favicon }}
             <link rel="icon" href="{{ .Site.Params.favicon | absURL }}">
         {{ end }}
