donate link optimize. publishing ISO posts, adding dates to articles

--- a/themes/minimal/layouts/partials/body-close.html
+++ b/themes/minimal/layouts/partials/body-close.html
@@ -3,4 +3,4 @@
   Override this in your site to insert code just before the closing <body> tag.
   For example, to install an analytics tracking package.
 -->
- <a href="https://www.buymeacoffee.com/amtsimplified"><strong>If you found this helpful, I would appreciate your support!</strong></a>
+ <a class="donate_link" href="https://www.buymeacoffee.com/amtsimplified"><strong>If you found any of this helpful, please consider supporting the site!</strong></a>
