--- a/themes/minimal/layouts/partials/css.html
+++ b/themes/minimal/layouts/partials/css.html
@@ -463,6 +463,16 @@ select {
     .active:after {
       content: "\2796"; /* Unicode character for "minus" sign (-) */
     }
+
+    a.donate_link, li.navbar_links:last-of-type a{
+      color: #5F7FFF !important;
+    }
+
+    a.donate_link:hover, li.navbar_links:last-of-type a:hover {
+      color: #5F7FFF !important;
+      text-decoration: underline;
+    }
+
     /* I GIVE UP ON TOOLTIPS
     .tooltip_label {
       border-bottom:1px dotted #666
