--- a/themes/minimal/layouts/_default/single.html
+++ b/themes/minimal/layouts/_default/single.html
@@ -5,6 +5,8 @@
     <div>
         <h2>{{ .Title }}</h2>
         <h5>{{ .Description }}</h5>
+        <h5>Last Updated: {{ .Date.Format ("January 2, 2006") }}</h5>
+
         {{ partial "tags" . }}
     </div>
 
