--- a/themes/minimal/layouts/partials/footer.html
+++ b/themes/minimal/layouts/partials/footer.html
@@ -7,7 +7,7 @@
 
         
         
-        <script data-name="BMC-Widget" src="https://cdnjs.buymeacoffee.com/1.0.0/widget.prod.min.js" data-id="amtsimplified" data-description="Support me on Buy me a coffee!" data-message="If you find this helpful, I would appreciate your support! " data-color="#40DCA5" data-position="Right" data-x_margin="18" data-y_margin="18"></script>
+        <script data-name="BMC-Widget" src="https://cdnjs.buymeacoffee.com/1.0.0/widget.prod.min.js" data-id="amtsimplified" data-description="Support me on Buy me a coffee!" data-message="If you find any of this helpful, please consider supporting the site!" data-color="#5F7FFF" data-position="Right" data-x_margin="18" data-y_margin="18"></script>
 
     </body>
 
