--- a/layouts/shortcodes/iso-exercise-planner.html
+++ b/layouts/shortcodes/iso-exercise-planner.html
@@ -215,6 +215,9 @@
   </tr>
 </table>
 
+<h4> <a href="https://www.jdoqocy.com/b3111p-85-7NPOORQPRUWNPQROUPWW" class="link_to_ad freetaxusa_iso_calc_ad"> File your taxes with FreeTaxUSA! </a></h4>
+<h4>They are one of the oldest and most trusted services that millions of Americans use every year. Stop paying to file your federal taxes!</h4>
+
 <script>
   // Dyanmic forms for ISO Spread Details
   // Starts with 1 ISO Grant Form shown
@@ -580,6 +583,7 @@
     // If the net capital gain happens to zero out, just disregard it. keep long_term_for_calc at 0
     } else if (sum_capital_gains == 0) {
       taxable_income = salary - total_exemptions - regular_deduction_final;
+      leftover_capital_loss_carryover = 0;
     }
 
     // In case where deduction brings you to negative taxable income, your taxable income is 0
