--- a/themes/minimal/layouts/partials/css.html
+++ b/themes/minimal/layouts/partials/css.html
@@ -486,6 +486,33 @@ select {
       color:red;
     }*/
 
+        /* default height 
+    .content {
+      display:flex;
+    }
+    .content_text {
+      flex: 0 0 90%;
+    }
+    .ad_side_banner_div {
+      position: relative;
+      float:right;
+    }
+    .ad_side_banner {
+       height: 60px;
+    }
+    @media only screen and (height:90px) {
+       /* 90 pixels high */
+       .ad_side_banner {
+          height:90px;
+       }
+    }
+    @media only screen and (height:125px) {
+       /* 125 pixels high */
+       .ad_side_banner {
+          height:125px;
+       }
+    }*/
+
 </style>
 
 <!-- main -->
