--- a/layouts/shortcodes/amt-calculator.html
+++ b/layouts/shortcodes/amt-calculator.html
@@ -37,14 +37,14 @@
                       <div class="form-input">
                           <div class="label-flex">
                             <label for="short_term_capital_gains">Short Term Capital Gains</label>
-                            <!--<a href="#" class="form-link">Learn More</a>-->
+                            <!--<a href="#" class="form-link learn_more_form_link">Learn More</a>-->
                           </div>
                           <input type="number" name="short_term_capital_gains" id="short_term_capital_gains" placeholder="0" />
                       </div>
                       <div class="form-input">
                           <div class="label-flex">
                             <label for="long_term_capital_gains">Long Term Capital Gains</label>
-                            <!--<a href="#" class="form-link">Learn More</a>-->
+                            <!--<a href="#" class="form-link learn_more_form_link">Learn More</a>-->
                           </div>
                           <input type="number" name="long_term_capital_gains" id="long_term_capital_gains"  placeholder="0" />
                       </div>
@@ -76,7 +76,7 @@
                       <div class="form-input">
                           <div class="label-flex">
                               <label for="sli">Student Loan Interest Paid</label>
-                              <a href="/articles/what-is-student-load-interest-sli-deduction/" class="form-link">Learn More</a>
+                              <a href="/articles/what-is-student-load-interest-sli-deduction/" class="form-link learn_more_form_link">Learn More</a>
                           </div>  
                           <input type="number" name="sli" id="sli" placeholder="0" onchange=check_min(this)>
                           <p class="calculator_validation_p calculator_minimum_p" id="sli_p"></p>
@@ -84,7 +84,7 @@
                       <div class="form-input">
                           <div class="label-flex">
                               <label for="medical_expenses">Medical Expenses</label>
-                              <a href="/articles/what-is-the-medical-expense-deduction" class="form-link">Learn More</a>
+                              <a href="/articles/what-is-the-medical-expense-deduction" class="form-link learn_more_form_link">Learn More</a>
                           </div> 
                           <input type="number" name="medical_expenses" id="medical_expenses" placeholder="0" onchange=check_min(this)>
                           <p class="calculator_validation_p calculator_minimum_p" id="medical_expenses_p"></p>
@@ -92,7 +92,7 @@
                       <div class="form-input">
                           <div class="label-flex">
                               <label for="salt">State and Local Tax (SALT)</label>
-                              <a href="/articles/what-is-the-state-and-local-tax-salt-deduction/" class="form-link">Learn More</a>
+                              <a href="/articles/what-is-the-state-and-local-tax-salt-deduction/" class="form-link learn_more_form_link">Learn More</a>
                           </div> 
                           <input type="number" name="salt" id="salt" placeholder="0" onchange=check_min(this)>
                           <p class="calculator_validation_p calculator_minimum_p" id="salt_p"></p>
@@ -100,7 +100,7 @@
                       <div class="form-input">
                           <div class="label-flex">
                               <label for="mortgage_interest">Mortgage Interest Paid</label>
-                              <a href="/articles/what-is-the-mortgage-interest-deduction/" class="form-link">Learn More</a>
+                              <a href="/articles/what-is-the-mortgage-interest-deduction/" class="form-link learn_more_form_link">Learn More</a>
                           </div> 
                           <input type="number" name="mortgage_interest" id="mortgage_interest" placeholder="0" onchange=check_min(this)>
                           <p class="calculator_validation_p calculator_minimum_p" id="mortgage_interest_p"></p>
@@ -112,7 +112,7 @@
                       <div class="form-radio">
                           <div class="label-flex">
                               <label for="iso_forms_count" class="required">How many ISO grants did you exercise from?</label>
-                              <a href="/articles/incentive-stock-option-iso-basics/" class="form-link">Learn More</a>
+                              <a href="/articles/incentive-stock-option-iso-basics/" class="form-link learn_more_form_link">Learn More</a>
                           </div>
                           <div class="form-radio-group">            
                               <div class="form-radio-item">
