--- a/layouts/shortcodes/amt-calculator.html
+++ b/layouts/shortcodes/amt-calculator.html
@@ -219,7 +219,7 @@
 </table>
 
 
-<h4> <a href="https://www.jdoqocy.com/b3111p-85-7NPOORQPRUWNPQROUPWW" class="link_to_ad freetaxusa_amt_calc_ad"> File your taxes with FreeTaxUSA! </a></h4>
+<h4> <a href="https://www.jdoqocy.com/b3111p-85-7NPOORQPRUWNPQROUPWW" class="link_to_ad freetaxusa_amt_calc_ad" target="_blank"> File your taxes with FreeTaxUSA! </a></h4>
 <h4>They are one of the oldest and most trusted services that millions of Americans use every year. Stop paying to file your federal taxes!</h4>
 
 <br>
