--- a/themes/minimal/layouts/partials/css.html
+++ b/themes/minimal/layouts/partials/css.html
@@ -8,7 +8,7 @@
         --border-width: {{ if .Site.Params.showBorder | default false }} 5px {{ else }} 0 {{ end }};
     }
 
-    h2.homepage-description {
+    .homepage-description {
       color: var(--accent) !important;
     }
 
@@ -511,7 +511,31 @@ select {
        .ad_side_banner {
           height:125px;
        }
-    }*/
+    }
+
+    /* Divider for homepage sectional */
+    .small-home-post-border:not(:last-child) {
+    border-right: 1px solid #acb9c4;
+    }
+
+    @media (max-width: 766px) {
+      .small-home-post-border:not(:last-child) {
+      border-right: 0;
+      border-bottom: 1px solid #acb9c4;
+      margin-bottom: 20px;
+      padding-bottom: 20px;
+      }
+    }
+
+    /* Homepage sectional flexbox - to ensure same height*/
+    .sectional-content {
+      display:flex;
+      flex-wrap: wrap;
+    }
+    .row {
+      display:flex;
+      flex-wrap: wrap;
+    }
 
 </style>
 
