freetaxusa word changes

--- a/layouts/shortcodes/amt-calculator.html
+++ b/layouts/shortcodes/amt-calculator.html
@@ -218,9 +218,8 @@
   </tbody>
 </table>
 
-<h4> Stop paying to file your federal taxes! </h4>
-<h4> <a href="https://www.jdoqocy.com/b3111p-85-7NPOORQPRUWNPQROUPWW" class="link_to_ad freetaxusa_amt_calc_ad" target="_blank"> File your taxes with FreeTaxUSA! </a></h4>
-<h4>One of the oldest and most trusted services that millions of Americans use every year</h4>
+<h4> <a href="https://www.jdoqocy.com/b3111p-85-7NPOORQPRUWNPQROUPWW" class="link_to_ad freetaxusa_amt_calc_ad" target="_blank"> Now that you have calculated your AMT, file your taxes <strong>for free</strong> with FreeTaxUSA! </a></h4>
+<h4>Seriously, stop paying to file your taxes. It's supposed to be something you can do at no cost. FreeTaxUSA is one of the oldest and most trusted services that millions of Americans use every year!</h4>
 
 <br>
 <button type="button" class="collapsible" id="regular_income_tax_results_collapsible">See Regular Income Tax Breakdown</button>
