--- a/themes/minimal/layouts/partials/body-close.html
+++ b/themes/minimal/layouts/partials/body-close.html
@@ -8,6 +8,6 @@
 
 {{ else }}
 	
-	<a class="donate_link" href="https://www.buymeacoffee.com/amtsimplified"><strong>If you found any of this helpful, please consider supporting the site!</strong></a>
+	<a class="donate_link" href="https://www.buymeacoffee.com/amtsimplified"><strong>If you found any of this helpful, please <u>consider supporting</u> the site!</strong></a>
 
 {{ end }}
