--- a/layouts/shortcodes/iso-exercise-planner.html
+++ b/layouts/shortcodes/iso-exercise-planner.html
@@ -215,9 +215,8 @@
   </tr>
 </table>
 
-<h4> Stop paying to file your federal taxes! </h4>
-<h4> <a href="https://www.jdoqocy.com/b3111p-85-7NPOORQPRUWNPQROUPWW" class="link_to_ad freetaxusa_amt_calc_ad" target="_blank"> File your taxes with FreeTaxUSA! </a></h4>
-<h4>One of the oldest and most trusted services that millions of Americans use every year</h4>
+<h4> <a href="https://www.jdoqocy.com/b3111p-85-7NPOORQPRUWNPQROUPWW" class="link_to_ad freetaxusa_amt_calc_ad" target="_blank"> Now that you've planned for your taxes, file <strong>for free</strong> with FreeTaxUSA! </a></h4>
+<h4>Seriously, stop paying to file your taxes. It's supposed to be something you can do at no cost. FreeTaxUSA is one of the oldest and most trusted services that millions of Americans use every year!</h4>
 
 
 <script>
